--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ jiter==0.11.1
 openai==2.6.1
 pillow==12.0.0
 prettytable==3.16.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.11
 pydantic==2.12.3
 pydantic_core==2.41.4
 python-decouple==3.8
